Fixed side space on mobile

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -10,7 +10,6 @@
 
 html, body {
   background: $dark-grey;
-  overflow-x: hidden;
 }
 
 html {
