--- a/style.css
+++ b/style.css
@@ -2070,8 +2070,7 @@
   transition-delay: 0.2s; }
 
 html, body {
-  background: #1c1c1c;
-  overflow-x: hidden; }
+  background: #1c1c1c; }
 
 html {
   position: relative; }
